test/visibility/rename/chainInSameUse.good
chainInSameUse.chpl:7: In module 'M':
chainInSameUse.chpl:8: error: cannot rename symbol 'bleep' as it is not defined in 'Foo'
chainInSameUse.chpl:8: warning: 'bleep' is repeated
chainInSameUse.chpl:8: note: did you mean to rename 'a' to 'bloop'?
